--- a/index.html
+++ b/index.html
@@ -2,41 +2,70 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Santos P Links</title>
+<title>Santos P Official Links</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body { font-family: Arial, sans-serif; background: #111; color: #fff; text-align: center; padding: 40px; }
-h1 { font-size: 40px; margin-bottom: 10px; }
-p { color: #bbb; margin-bottom: 30px; }
-a.button {
+body {
+  font-family: Arial, sans-serif;
+  background: linear-gradient(180deg, #111, #222, #000);
+  color: #fff;
+  text-align: center;
+  padding: 40px;
+}
+h1 { font-size: 42px; margin-bottom: 10px; }
+p { color: #ccc; margin-bottom: 25px; font-size: 18px; }
+.button {
   display: block;
-  background: #ff9900;
-  color: #111;
+  background: #f9a825;
+  color: #000;
   padding: 15px;
-  margin: 12px auto;
-  width: 80%;
-  max-width: 400px;
-  border-radius: 8px;
+  margin: 14px auto;
+  width: 85%;
+  max-width: 420px;
+  border-radius: 10px;
   font-size: 20px;
   font-weight: bold;
   text-decoration: none;
+  transition: 0.2s;
 }
-a.button:hover { background: #ffaa22; }
-img { width: 180px; height: 180px; border-radius: 50%; object-fit: cover; margin-bottom: 20px; }
+.button:hover {
+  background: #ffb83b;
+  transform: scale(1.05);
+}
+img.pfp {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 20px;
+  border: 4px solid #f9a825;
+}
+img.qr {
+  width: 160px;
+  margin-top: 40px;
+}
 </style>
 </head>
 <body>
 
-<img src="DSC06565-2.JPG" alt="Santos P Photo">
+<img src="DSC06565-2.JPG" class="pfp" alt="Santos P Photo">
 
 <h1>SANTOS P</h1>
 <p>Afrobeat • Amapiano Artist</p>
 
-<a class="button" href="https://open.spotify.com/artist/26NtemVqCKKxtLX0ZNNk0U">Spotify</a>
-<a class="button" href="https://www.instagram.com/santosp_artist/">Instagram</a>
-<a class="button" href="https://www.youtube.com/@SantosP_Music">YouTube</a>
-<a class="button" href="Santos_P_EPK_final.docx">Download EPK</a>
-<a class="button" href="Santos_P_EPK.pdf">EPK (PDF)</a>
+<a class="button" href="https://open.spotify.com/artist/26NtemVqCKKxtLX0ZNNk0U">🎵 Spotify</a>
+<a class="button" href="https://www.instagram.com/santosp_artist/">📸 Instagram</a>
+<a class="button" href="https://www.youtube.com/@SantosP_Music">▶️ YouTube</a>
+
+<a class="button" href="YOUR_OLIVER_LINK_HERE">🎧 Listen to “Oliver”</a>
+
+<a class="button" href="Santos_P_EPK_final.docx">📄 Download EPK (Docx)</a>
+<a class="button" href="Santos_P_EPK.pdf">📄 EPK (PDF)</a>
+
+<a class="button" href="mailto:santoskark@gmail.com">📩 Contact: santoskark@gmail.com</a>
+
+<p>Scan to open this page:</p>
+<img src="SantosP_QR.png" class="qr">
 
 </body>
 </html>
