--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -53,15 +52,22 @@ img.qr {
 <h1>SANTOS P</h1>
 <p>Afrobeat • Amapiano Artist</p>
 
+<!-- MAIN LINKS -->
 <a class="button" href="https://open.spotify.com/artist/26NtemVqCKKxtLX0ZNNk0U">🎵 Spotify</a>
 <a class="button" href="https://www.instagram.com/santosp_artist/">📸 Instagram</a>
 <a class="button" href="https://www.youtube.com/@SantosP_Music">▶️ YouTube</a>
 
-<a class="button" href="YOUR_OLIVER_LINK_HERE">🎧 Listen to “Oliver”</a>
+<!-- OLIVER LINKS -->
+<a class="button" href="https://open.spotify.com/album/0wANqndZmJKJlOdsdk4ayI">🎧 Oliver – Spotify</a>
+<a class="button" href="https://music.apple.com/fi/album/oliver-single/1839263327">🍏 Oliver – Apple Music</a>
+<a class="button" href="https://music.youtube.com/search?q=Oliver+santos">🎵 Oliver – YouTube Music</a>
+<a class="button" href="https://www.youtube.com/watch?v=ErkmDHuHLbM&list=RDErkmDHuHLbM&start_radio=1">▶️ Oliver – YouTube Video</a>
 
+<!-- EPK -->
 <a class="button" href="Santos_P_EPK_final.docx">📄 Download EPK (Docx)</a>
 <a class="button" href="Santos_P_EPK.pdf">📄 EPK (PDF)</a>
 
+<!-- Contact -->
 <a class="button" href="mailto:santoskark@gmail.com">📩 Contact: santoskark@gmail.com</a>
 
 <p>Scan to open this page:</p>
